--- a/philo_three/Makefile
+++ b/philo_three/Makefile
@@ -1,28 +1,26 @@
 NAME =	philo_three
 
-SRCS =	main.c		\
-		setup.c		\
-		exec.c		\
-		eat.c		\
-		error.c		\
-		display.c	\
-		clean.c		\
+SRCS =	srcs/main.c		\
+		srcs/setup.c	\
+		srcs/exec.c		\
+		srcs/eat.c		\
+		srcs/error.c	\
+		srcs/display.c	\
+		srcs/clean.c	\
 		annexes.c	
 
 OBJS =	$(addprefix $(OBJS_DIR), $(notdir $(SRCS:.c=.o)))
 OBJS_DIR = objs/
 
-INCL =	philo_three.h
+INCL =	includes/philo_three.h
 
 CC =	gcc
 FLAGS =	-Wall -Wextra -Werror
 
-$(OBJS_DIR)%.o:	%.c
+$(OBJS_DIR)%.o:	*/%.c
 						if [ -d "objs" ]; then : ; else mkdir objs; fi
 						$(CC) $(FLAGS) -c $< -o $@
 						echo $(notdir $@) "\033[0;32mcreated\033[0m"
-
-
 
 all :		$(NAME)
 
@@ -41,13 +39,6 @@ fclean :	clean
 			rm -rf $(NAME)
 
 re :		fclean all
-
-test:		re
-			echo
-			echo
-			./$(NAME) 5 900 1000 1000
-
-
 
 .PHONY :	all clean fclean re test
 .SILENT: 
